# CityDraft

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  vcpkg.json
app/: CMakeLists.txt
app/CityDraft/: Resources.qrc  main.cpp
app/CityDraft/Assets/: Factory.cpp  Factory.h  SkiaAssetManager.cpp  SkiaAssetManager.h  SkiaColorCurve.cpp  SkiaColorCurve.h  SkiaImage.cpp  SkiaImage.h
app/CityDraft/Drafts/: SkiaColorCurve.cpp  SkiaColorCurve.h  SkiaImage.cpp  SkiaImage.h
app/CityDraft/Input/: ConstKeyBindingProvider.h  Factory.cpp  Factory.h  IKeyBindingProvider.h  ISelectionManager.h  Instrument.h  Utils.cpp  Utils.h
app/CityDraft/Input/Instruments/: CompositeBezierEditor.cpp  CompositeBezierEditor.h  DraftEditor.cpp  DraftEditor.h  DraftTransformer.cpp  DraftTransformer.h  ImageDraftEditor.cpp  ImageDraftEditor.h  Instrument.cpp  Instrument.h  Panner.cpp  Panner.h  Selector.cpp  Selector.h
app/CityDraft/Logging/: LogManager.cpp  LogManager.h  QtLogSink.h
app/CityDraft/UI/: FlowLayout.cpp  FlowLayout.h  ImageSelectionWidget.cpp  ImageSelectionWidget.h  LayerItem.cpp  LayerItem.h  LayersWidget.cpp  LayersWidget.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  VariantImageButton.cpp  VariantImageButton.h
app/CityDraft/UI/Colors/: ConstColorsProvider.h  Factory.cpp  Factory.h  IColorsProvider.h  Utils.cpp  Utils.h
app/CityDraft/UI/Layers/: AddCommand.h  DraggableLayerList.cpp  DraggableLayerList.h  ItemWidget.cpp  ItemWidget.h  LayerItem.cpp  LayerItem.h  LayersWidget.cpp  LayersWidget.h  ListWidget.cpp  ListWidget.h  RemoveCommand.h  ReorderCommand.h
app/CityDraft/UI/Properties/: EditorWidget.cpp  EditorWidget.h  IntegerEditorWidget.cpp  IntegerEditorWidget.h  LineEditorWidget.cpp  LineEditorWidget.h  LineEditorWidget.ui  PropertiesWidget.cpp  PropertiesWidget.h  PropertiesWidget.ui  StringEditorWidget.cpp  StringEditorWidget.h  StringEditorWidget.ui  TransformEditorWidget.cpp  TransformEditorWidget.h  TransformEditorWidget.ui
app/CityDraft/UI/Rendering/: IRenderer.h  ImageSelectionWidget.cpp  ImageSelectionWidget.h  OpenGlUtils.h  RenderingWidget.cpp  RenderingWidget.h  SkiaWidget.cpp  SkiaWidget.h
app/CityDraft/UI/Rendering/SkiaPainters/: Asset.h  Circle.cpp  Circle.h  ColorCurve.cpp  ColorCurve.h  Image.cpp  Image.h  Line.cpp  Line.h  Painter.h  Rect.cpp  Rect.h
public/CityDraft/: Angles.h  AxisAlignedBoundingBox2D.h  DraftLayer.h  DraftObject.h  DraftScene.h  DraftZSortKey.h  Layer.h  LinearColor.h  Scene.h  Transform2D.h  Vector2D.h
public/CityDraft/Assets/: Asset.h  AssetManager.h  ColorCurve.h  Curve.h  FilesystemError.h  Image.h  ImageAsset.h  ImageVariantGroup.h
public/CityDraft/Curves/: CompositeBezierCurve.h  ConstWidthProvider.h  Factory.h  ICurve.h  IWidthProvider.h  LineSegment.h
public/CityDraft/Drafts/: Curve.h  Draft.h  IRenderProxy.h  Image.h
public/CityDraft/Drafts/Properties/: Property.h  TypedProperty.h  View.h
public/CityDraft/Logging/: LogManager.h
public/CityDraft/Serialization/: BoostArchive.h  IArchive.h  ISerializable.h
public/CityDraft/Utils/: DeduceReturnType.h  ImageLoader.h  ImageUtils.h
src/: CMakeLists.txt
src/CityDraft/: DraftObject.cpp  DraftScene.cpp  Layer.cpp  Scene.cpp
src/CityDraft/Assets/: Asset.cpp  AssetManager.cpp  ColorCurve.cpp  Curve.cpp  Image.cpp  ImageAsset.cpp
src/CityDraft/Curves/: CompositeBezierCurve.cpp  Factory.cpp  LineSegment.cpp
src/CityDraft/Drafts/: Curve.cpp  Draft.cpp  Image.cpp
src/CityDraft/Drafts/Properties/: Property.cpp
src/CityDraft/Logging/: LogManager.cpp
src/CityDraft/Serialization/: BoostArchive.cpp
src/CityDraft/Utils/: ImageLoader.cpp  ImageUtils.cpp
test/: CMakeLists.txt
test/CityDraft/: AnglesTest.cpp  LinearColorTest.cpp  LogManager.cpp  LogManager.h
test/CityDraft/Assets/: AssetManagerMock.h  AssetManagerTest.cpp  AssetMock.h
test/CityDraft/Drafts/: DraftMock.h
test/CityDraft/Drafts/Properties/: PropertiesTest.cpp
